Fixed small device overflow error

--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -53,7 +53,7 @@ html{
 
 .sub-heading{
   font-family: gravity-bold;
-  
+
 }
 
 p{
@@ -77,7 +77,7 @@ body{overflow-x: hidden;
 
 .profile{
 	padding-bottom: 5px;
-
+  
 	
   width: 100%;
 }
@@ -144,7 +144,7 @@ body{overflow-x: hidden;
 }
 
 .sidebar{
-	position: absolute;
+	position: absolute!important;
 	text-align: center;
 	top: 0;
 	width: 250px;
@@ -369,7 +369,7 @@ div.cv-button-wrapper a:hover .cv-button{
   #page-content-id{
   	padding-left: 15px;
   	margin-right: 0;
-  	position: relative;
+  	position: absolute!important;
   }
 
   #wrapper.toggled  #page-content-id{
